--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -6,6 +6,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: docker build 
+    - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+      uses: actions/setup-dotnet@v1.7.2
+      with:
+          dotnet-version: 5.0.x
+    - name: Install dependencies
+      run: dotnet restore
+      
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
+      
+    - name: docker build
       run: docker build ./TestWebApplication -t jonnox0/mytestcontainer
