--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -11,6 +11,7 @@ jobs:
       with:
           dotnet-version: 5.0.x
           
+    - uses: actions/checkout@v2
     - name: Install dependencies
       run: dotnet restore
       
