--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -26,7 +26,7 @@ jobs:
         username: ${{github.actor}}
         password: ${{secrets.GITHUB_TOKEN}}
         registry: docker.pkg.github.com
-        file: ${context}/TestWebApplication/Dockerfile
+        file: /TestWebApplication/Dockerfile
         repository: jonnox0/github-actions-for-packages/mytestcontainer
         tag_with_sha: true
 
