--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,4 +22,9 @@ jobs:
       
     - name: docker build
       uses: docker/build-push-action@v2
+      
+    - name: register container
+      run: |
+        echo $secret | docker login ghcr.io -u kasunsjc --password-stdin
+        docker image push ghcr.io/jonnox0/ActionTest1:latest
 
