--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,6 +25,6 @@ jobs:
       
     - name: register container
       run: |
-        echo $secret | docker login ghcr.io -u jonnox0 --password-stdin
-        docker image push ghcr.io/jonnox0/ActionTest1:latest
+        winpty echo $secret | docker login ghcr.io -u jonnox0 --password-stdin
+        winpty docker image push ghcr.io/jonnox0/ActionTest1:latest
 
