--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -6,6 +6,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Var
+      run: env
+      
+    - name: login with docker
+      run: docker login ghcr.io -u jonnox0 -p $SECRET
+    
     - name: Setup .NET Core SDK 5.0.x
       uses: actions/setup-dotnet@v1.7.2
       with:
@@ -16,15 +22,11 @@ jobs:
       run: dotnet restore
       
     - name: Build
-      run: |
-        dotnet build --configuration Release --no-restore
-        dir
+      run: dotnet build --configuration Release --no-restore
       
     - name: docker build
       uses: docker/build-push-action@v2
       
     - name: register container
-      run: |
-        sudo docker login ghcr.io -u jonnox0 -p $SECRET
-        sudo docker image push ghcr.io/jonnox0/ActionTest1:latest
+      run: sudo docker image push ghcr.io/jonnox0/ActionTest1:latest
 
