--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -4,9 +4,10 @@ name: Build Container
 on: [push]
 
 jobs:
-  TestEnv:
+  
     build:
       runs-on: ubuntu-latest
+      environment: TestEnv
       steps:
       - name: Var
         run: env
@@ -20,6 +21,7 @@ jobs:
             dotnet-version: 5.0.x
           
       - uses: actions/checkout@v2
+      
       - name: Install dependencies
         run: dotnet restore
       
