--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,7 +13,7 @@ jobs:
         run: echo $SECRET
       
       - name: login with docker
-        run: docker login ghcr.io -u jonnox0 -p ${{ secrets.SuperSecret }}
+        run: docker login ghcr.io -u jonnox0 -p ${{ secrets.Secret }}
     
       - name: Setup .NET Core SDK 5.0.x
         uses: actions/setup-dotnet@v1.7.2
