--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -32,5 +32,5 @@ jobs:
         uses: docker/build-push-action@v2
       
       - name: register container
-        run: sudo docker image push ghcr.io/jonnox0/ActionTest1:latest
+        run: sudo docker image push ghcr.io/jonnox0/actiontest:latest
 
