--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -30,7 +30,10 @@ jobs:
       
       - name: docker build
         uses: docker/build-push-action@v2
+        
+      - name: docker images
+        run: docker image list
       
       - name: register container
-        run: sudo docker image push ghcr.io/jonnox0/webapplicationtest:latest
+        run: sudo docker image push ghcr.io/jonnox0/webapplicationtest:master
 
