--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -31,11 +31,11 @@ jobs:
       - name: docker build
         uses: docker/build-push-action@v2
         with:
-            image: actionTest:master
+            image: actiontest:master
         
       - name: docker images
         run: docker image list
       
       - name: register container
-        run: sudo docker image push ghcr.io/§{{GITHUB_REPOSITORY}}/actionTest:master
+        run: sudo docker image push ghcr.io/§{{GITHUB_REPOSITORY}}/actiontest:master
 
