--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -37,5 +37,5 @@ jobs:
         run: docker image list
       
       - name: register container
-        run: sudo docker image push ghcr.io/§{{GITHUB_REPOSITORY}}/actiontest:master
+        run: sudo docker image push ghcr.io/jonnox0/actiontest:master
 
