--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -29,9 +29,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       
       - name: docker build
-        uses: docker/build-push-action@v2
-        with:
-            image: actiontest:master
+        run: build . -t jonnox0/actiontest:master
         
       - name: docker images
         run: docker image list
