--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
       
       - name: docker build
-        run: build . -t jonnox0/actiontest:master
+        run: docker build . -t jonnox0/actiontest:master
         
       - name: docker images
         run: docker image list
