--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -29,7 +29,11 @@ jobs:
             name: testActionBuild
             path: TestWebApplication/bin/Release/net5.0
             retention-days: 1
-      
+
+    Container:
+        runs-on: ubuntu-latest
+        environment: TestEnv
+        steps:      
       
         - name: Docker Build
           run: docker build . -t ghcr.io/jonnox0/actiontest:master
